<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="8.0dip" android:paddingTop="4.0dip" android:paddingRight="8.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="16.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/game_signup_title" android:singleLine="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/game_signup_message" />
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1" android:shrinkColumns="1">
        <TableRow>
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:minWidth="60.0dip" android:text="@string/form_label_name" />
            <EditText android:id="@id/name" android:hint="@string/form_hint_name" android:singleLine="true" android:inputType="textPersonName|textCapWords" />
        </TableRow>
        <TableRow>
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:text="@string/form_label_email" />
            <EditText android:id="@id/email" android:hint="@string/form_hint_email" android:singleLine="true" android:inputType="textEmailAddress" />
        </TableRow>
    </TableLayout>
    <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:id="@id/age_verify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/form_label_birthdate" />
    <View android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0" />
    <ImageButton android:layout_gravity="center_horizontal" android:id="@id/submit" android:background="@drawable/claim_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginRight="10.0dip">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="12.0sp" android:id="@id/privacy_link" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_weight="1.0" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="12.0sp" android:gravity="right" android:id="@id/terms_link" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>