<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/list_item_gradient" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@drawable/action_gradient" android:paddingLeft="4.0dip" android:paddingTop="6.0dip" android:paddingRight="4.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_cancel_feedback" android:layout_width="80.0dip" android:layout_height="fill_parent" android:text="@string/feedback_cancel" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/feedback_title" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_weight="1.0" />
        <Button android:id="@id/btn_send_feedback" android:layout_width="80.0dip" android:layout_height="fill_parent" android:text="@string/feedback_send" />
    </LinearLayout>
    <ScrollView android:scrollbarStyle="outsideInset" android:layout_width="fill_parent" android:layout_height="0.0dip" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorSecondaryInverse" android:id="@id/txt_feedback_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:hint="@string/feedback_email_hint" android:inputType="textEmailAddress" android:imeOptions="actionNext" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorSecondaryInverse" android:gravity="top|left|center" android:id="@id/txt_feedback_message" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="6.0dip" android:layout_marginTop="6.0dip" android:hint="@string/feedback_message_hint" android:minLines="3" android:layout_weight="1.0" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" android:imeOptions="actionDone|flagNoEnterAction" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>