<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/list_item_gradient" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/action_title_bar" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/img_venue" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="85.0dip" android:layout_marginLeft="4.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="4.0dip" android:src="@drawable/store_logo_placeholder" android:scaleType="fitCenter" />
        <RadioGroup android:orientation="horizontal" android:id="@id/group_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkedButton="@id/details">
            <RadioButton android:gravity="center" android:id="@id/details" android:text="@string/details" android:layout_weight="1.0" style="@style/PlaceDetailGroup" />
            <RadioButton android:gravity="center" android:id="@id/contact" android:text="@string/Contact" android:layout_weight="1.0" style="@style/PlaceDetailGroup" />
            <RadioButton android:gravity="center" android:id="@id/promo" android:text="@string/featured" android:layout_weight="1.0" style="@style/PlaceDetailGroup" />
        </RadioGroup>
        <ScrollView android:id="@id/scrl_desc" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:id="@id/rating_header" android:visibility="gone" android:text="@string/user_rating" style="@style/Separator" />
                <RatingBar android:gravity="left|center" android:id="@id/ratingbar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numStars="5" style="@style/RatingBar" />
                <TextView android:id="@id/desc_header" android:text="@string/description" style="@style/Separator" />
                <TextView android:textAppearance="?android:textAppearanceMediumInverse" android:gravity="top" android:id="@id/txt_desc" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <Button android:layout_gravity="right" android:id="@id/btn_more_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_marginBottom="6.0dip" style="@style/MoreButton" />
                <Button android:layout_gravity="right" android:id="@id/btn_less_desc" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_marginBottom="6.0dip" style="@style/LessButton" />
                <TextView android:id="@id/hours_header" android:text="@string/hours" style="@style/Separator" />
                <TextView android:textAppearance="?android:textAppearanceMediumInverse" android:gravity="top" android:id="@id/txt_hours" android:padding="5.0dip" android:paddingTop="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <Button android:layout_gravity="right" android:id="@id/btn_more_hours" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_marginBottom="6.0dip" style="@style/MoreButton" />
                <Button android:layout_gravity="right" android:id="@id/btn_less_hours" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_marginBottom="6.0dip" style="@style/LessButton" />
            </LinearLayout>
        </ScrollView>
        <ScrollView android:id="@id/contact_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:id="@id/phone_header" android:text="@string/phone" style="@style/Separator" />
                <Button android:id="@id/btn_call" android:layout_width="fill_parent" android:layout_height="wrap_content" android:phoneNumber="true" style="@style/CallButton" />
                <TextView android:id="@id/address_header" android:text="@string/address" style="@style/Separator" />
                <TextView android:textAppearance="?android:textAppearanceSmallInverse" android:textSize="16.0dip" android:layout_gravity="center" android:id="@id/txt_address" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:id="@id/website_header" android:text="@string/website" style="@style/Separator" />
                <TextView android:textAppearance="?android:textAppearanceMediumInverse" android:textStyle="bold" android:textColorHighlight="@color/pi_blue_light" android:textColorLink="@color/pi_blue_dark" android:gravity="center" android:autoLink="web" android:id="@id/txt_web_address" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:orientation="vertical" android:id="@id/promos_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
            <ListView android:id="@id/promo_list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <TextView android:textAppearance="?android:textAppearanceMediumInverse" android:gravity="center" android:id="@id/txt_no_promos" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/none" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>